Refactor room addition functionality by introducing an InitializeDAO for database connections and updating the AddRoomDAO to utilize the new AddRoomGateway interface. Updated UML diagram to reflect changes in architecture.

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
             <artifactId>lombok</artifactId>
             <version>1.18.38</version>
         </dependency>
+
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
@@ -86,6 +87,19 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>1.18.38</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
             </plugin>
         </plugins>
     </build>
